# xy_settings

./: .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
test/: main.py  xy_test_settings.toml
xy_settings/: Settings.py  SettingsDelegate.py
xy_settings/Section/: Section.py
