[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.11.3"

name = "xy_settings"

authors = [{ name = "yuyangit", email = "yuyangit.0515@qq.com" }]
description = "项目设置模块"

dynamic = ["version"]

readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["xy_type", "xy_string", "xy_file", "xy_configure"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_settings"] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
